チャンネルメンバーかどうかバリデーション機能を追加実装