@@ -14,6 +14,7 @@ import org.springframework.web.bind.annotation.CrossOrigin;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import com.api.EngineerCollabo.repositories.ChannelRepository;
 import com.api.EngineerCollabo.repositories.UserRepository;
@@ -47,26 +48,31 @@ public class ChannelController {
     }
 
     @GetMapping("/{id}")
-    public ResponseChannel responseChannel(@PathVariable("id") Optional<Integer> ID) {
+    public ResponseChannel responseChannel(@PathVariable("id") Optional<Integer> ID, @RequestParam("userId") Integer userId) {
         if (ID.isPresent()) {
             int id = ID.get();
             Channel channel = channelRepository.findById(id);
-            return channelService.changeResponseChannel(channel);
-        } else {
-            return null;
+
+            // ユーザーがメンバーかどうか確認
+            if (isMember(channel, userId)) {
+                return channelService.changeResponseChannel(channel);
+            }
         }
+        return null; // メンバーでない場合は null を返す
     }
 
     @GetMapping
-    public List<ResponseChannel> responseChannels(@RequestParam("ids") Optional<List<Integer>> ids) {
+    public List<ResponseChannel> responseChannels(@RequestParam("ids") Optional<List<Integer>> ids, @RequestParam("userId") Integer userId) {
         if (ids.isPresent()) {
             List<Channel> channels = channelRepository.findAllById(ids.get());
+
+            // 自分がメンバーであるチャンネルだけを返す
             return channels.stream()
-                        .map(channelService::changeResponseChannel)
-                        .toList();
-        } else {
-            return List.of(); // 空のリストを返す
+                    .filter(channel -> isMember(channel, userId))
+                    .map(channelService::changeResponseChannel)
+                    .collect(Collectors.toList());
         }
+        return List.of(); // 空のリストを返す
     }
 
     @PatchMapping("/{id}")
@@ -89,5 +95,23 @@ public class ChannelController {
             int id = ID.get();
             channelRepository.deleteById(id);
         }
+    }
+
+    /**
+     * チャンネルに自分がメンバーとして含まれているかを判定する
+     * 
+     * @param channel チェック対象のチャンネル
+     * @param userId ユーザーID
+     * @return true: メンバーである, false: メンバーでない
+     */
+    private boolean isMember(Channel channel, Integer userId) {
+        // チャンネルまたはメンバーリストがnullの場合はfalseを返す
+        if (channel == null || channel.getChannelMembers() == null) {
+            return false;
+        }
+
+        // チャンネルのメンバーリストを走査し、指定されたユーザーIDが含まれているかを確認
+        return channel.getChannelMembers().stream()
+                .anyMatch(channelMember -> channelMember.getUser() != null && channelMember.getUser().getId().equals(userId));
     }
 }
